tests/machine/x/cpp/group_by_conditional_sum.error
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:149:22: error: ‘class std::any’ has no member named ‘cat’
  149 |       auto __key = i.cat;
      |                      ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:172:64: error: ‘struct Result’ has no member named ‘flag’
  172 |                   std::vector<decltype((std::declval<Result>().flag
      |                                                                ^~~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:173:70: error: ‘struct Result’ has no member named ‘val’
  173 |                                             ? std::declval<Result>().val
      |                                                                      ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:172:64: error: ‘struct Result’ has no member named ‘flag’
  172 |                   std::vector<decltype((std::declval<Result>().flag
      |                                                                ^~~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:173:70: error: ‘struct Result’ has no member named ‘val’
  173 |                                             ? std::declval<Result>().val
      |                                                                      ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:174:50: error: template argument 1 is invalid
  174 |                                             : 0))>
      |                                                  ^
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:174:50: error: template argument 2 is invalid
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:177:29: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  177 |                     __items.push_back((x.flag ? x.val : 0));
      |                             ^~~~~~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:177:42: error: ‘struct Result’ has no member named ‘flag’
  177 |                     __items.push_back((x.flag ? x.val : 0));
      |                                          ^~~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:177:51: error: ‘struct Result’ has no member named ‘val’
  177 |                     __items.push_back((x.flag ? x.val : 0));
      |                                                   ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:171:19:   required from here
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:170:44: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  170 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                                          ~~^~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:170:55: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  170 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                     ~~^~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:184:63: error: ‘struct Result’ has no member named ‘val’
  184 |                   std::vector<decltype(std::declval<Result>().val)> __items;
      |                                                               ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:184:63: error: ‘struct Result’ has no member named ‘val’
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:184:67: error: template argument 1 is invalid
  184 |                   std::vector<decltype(std::declval<Result>().val)> __items;
      |                                                                   ^
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:184:67: error: template argument 2 is invalid
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:186:29: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  186 |                     __items.push_back(x.val);
      |                             ^~~~~~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:186:41: error: ‘struct Result’ has no member named ‘val’
  186 |                     __items.push_back(x.val);
      |                                         ^~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:2)> [with auto:2 = int]’:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:183:19:   required from here
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:182:44: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  182 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                                          ~~^~~~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:182:55: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  182 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                                                     ~~^~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp: In lambda function:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:165:24: error: no matching function for call to ‘std::vector<std::pair<std::any, __struct4> >::push_back(<brace-enclosed initializer list>)’
  165 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~^
  166 |           {g.key,
      |           ~~~~~~~       
  167 |            __struct4{
      |            ~~~~~~~~~~   
  168 |                g.key,
      |                ~~~~~~   
  169 |                (([&](auto v) {
      |                ~~~~~~~~~~~~~~~
  170 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  171 |                 })(([&]() {
      |                 ~~~~~~~~~~~
  172 |                   std::vector<decltype((std::declval<Result>().flag
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  173 |                                             ? std::declval<Result>().val
      |                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  174 |                                             : 0))>
      |                                             ~~~~~~
  175 |                       __items;
      |                       ~~~~~~~~
  176 |                   for (auto x : g.items) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~
  177 |                     __items.push_back((x.flag ? x.val : 0));
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  178 |                   }
      |                   ~     
  179 |                   return __items;
      |                   ~~~~~~~~~~~~~~~
  180 |                 })()) /
      |                 ~~~~~~~ 
  181 |                 ([&](auto v) {
      |                 ~~~~~~~~~~~~~~
  182 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  183 |                 })(([&]() {
      |                 ~~~~~~~~~~~
  184 |                   std::vector<decltype(std::declval<Result>().val)> __items;
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  185 |                   for (auto x : g.items) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~
  186 |                     __items.push_back(x.val);
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~
  187 |                   }
      |                   ~     
  188 |                   return __items;
      |                   ~~~~~~~~~~~~~~~
  189 |                 })()))}});
      |                 ~~~~~~~~~
In file included from /usr/include/c++/13/vector:66,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:10:
/usr/include/c++/13/bits/stl_vector.h:1281:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::pair<std::any, __struct4>; _Alloc = std::allocator<std::pair<std::any, __struct4> >; value_type = std::pair<std::any, __struct4>]’
 1281 |       push_back(const value_type& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1281:35: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘const std::vector<std::pair<std::any, __struct4> >::value_type&’ {aka ‘const std::pair<std::any, __struct4>&’}
 1281 |       push_back(const value_type& __x)
      |                 ~~~~~~~~~~~~~~~~~~^~~
/usr/include/c++/13/bits/stl_vector.h:1298:7: note: candidate: ‘void std::vector<_Tp, _Alloc>::push_back(value_type&&) [with _Tp = std::pair<std::any, __struct4>; _Alloc = std::allocator<std::pair<std::any, __struct4> >; value_type = std::pair<std::any, __struct4>]’
 1298 |       push_back(value_type&& __x)
      |       ^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:1298:30: note:   no known conversion for argument 1 from ‘<brace-enclosed initializer list>’ to ‘std::vector<std::pair<std::any, __struct4> >::value_type&&’ {aka ‘std::pair<std::any, __struct4>&&’}
 1298 |       push_back(value_type&& __x)
      |                 ~~~~~~~~~~~~~^~~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp: In function ‘int main()’:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:197:5: error: conversion from ‘vector<__struct4>’ to non-scalar type ‘vector<Result>’ requested
  146 |   std::vector<Result> result = ([&]() {
      |                                ~~~~~~~~
  147 |     std::vector<__struct3> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  148 |     for (auto i : items) {
      |     ~~~~~~~~~~~~~~~~~~~~~~
  149 |       auto __key = i.cat;
      |       ~~~~~~~~~~~~~~~~~~~
  150 |       bool __found = false;
      |       ~~~~~~~~~~~~~~~~~~~~~
  151 |       for (auto &__g : __groups) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  152 |         if (__g.key == __key) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~
  153 |           __g.items.push_back(Result{i});
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  154 |           __found = true;
      |           ~~~~~~~~~~~~~~~
  155 |           break;
      |           ~~~~~~
  156 |         }
      |         ~
  157 |       }
      |       ~
  158 |       if (!__found) {
      |       ~~~~~~~~~~~~~~~
  159 |         __groups.push_back(__struct3{__key, std::vector<Result>{Result{i}}});
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  160 |       }
      |       ~
  161 |     }
      |     ~
  162 |     std::vector<std::pair<decltype(std::declval<__struct3>().key), __struct4>>
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  163 |         __items;
      |         ~~~~~~~~
  164 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  165 |       __items.push_back(
      |       ~~~~~~~~~~~~~~~~~~
  166 |           {g.key,
      |           ~~~~~~~
  167 |            __struct4{
      |            ~~~~~~~~~~
  168 |                g.key,
      |                ~~~~~~
  169 |                (([&](auto v) {
      |                ~~~~~~~~~~~~~~~
  170 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  171 |                 })(([&]() {
      |                 ~~~~~~~~~~~
  172 |                   std::vector<decltype((std::declval<Result>().flag
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  173 |                                             ? std::declval<Result>().val
      |                                             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  174 |                                             : 0))>
      |                                             ~~~~~~
  175 |                       __items;
      |                       ~~~~~~~~
  176 |                   for (auto x : g.items) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~
  177 |                     __items.push_back((x.flag ? x.val : 0));
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  178 |                   }
      |                   ~
  179 |                   return __items;
      |                   ~~~~~~~~~~~~~~~
  180 |                 })()) /
      |                 ~~~~~~~
  181 |                 ([&](auto v) {
      |                 ~~~~~~~~~~~~~~
  182 |                   return std::accumulate(v.begin(), v.end(), 0.0);
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  183 |                 })(([&]() {
      |                 ~~~~~~~~~~~
  184 |                   std::vector<decltype(std::declval<Result>().val)> __items;
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  185 |                   for (auto x : g.items) {
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~
  186 |                     __items.push_back(x.val);
      |                     ~~~~~~~~~~~~~~~~~~~~~~~~~
  187 |                   }
      |                   ~
  188 |                   return __items;
      |                   ~~~~~~~~~~~~~~~
  189 |                 })()))}});
      |                 ~~~~~~~~~~
  190 |     }
      |     ~
  191 |     std::sort(__items.begin(), __items.end(),
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  192 |               [](auto &a, auto &b) { return a.first < b.first; });
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  193 |     std::vector<__struct4> __res;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  194 |     for (auto &p : __items)
      |     ~~~~~~~~~~~~~~~~~~~~~~~
  195 |       __res.push_back(p.second);
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~
  196 |     return __res;
      |     ~~~~~~~~~~~~~
  197 |   })();
      |   ~~^~
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:3&, auto:4&)> [with auto:3 = std::pair<std::any, __struct4>; auto:4 = std::pair<std::any, __struct4>]’:
/usr/include/c++/13/bits/predefined_ops.h:158:30:   required from ‘constexpr bool __gnu_cxx::__ops::_Iter_comp_iter<_Compare>::operator()(_Iterator1, _Iterator2) [with _Iterator1 = __gnu_cxx::__normal_iterator<std::pair<std::any, __struct4>*, std::vector<std::pair<std::any, __struct4> > >; _Iterator2 = __gnu_cxx::__normal_iterator<std::pair<std::any, __struct4>*, std::vector<std::pair<std::any, __struct4> > >; _Compare = main()::<lambda()>::<lambda(auto:3&, auto:4&)>]’
/usr/include/c++/13/bits/stl_algo.h:1819:14:   required from ‘void std::__insertion_sort(_RandomAccessIterator, _RandomAccessIterator, _Compare) [with _RandomAccessIterator = __gnu_cxx::__normal_iterator<pair<any, __struct4>*, vector<pair<any, __struct4> > >; _Compare = __gnu_cxx::__ops::_Iter_comp_iter<main()::<lambda()>::<lambda(auto:3&, auto:4&)> >]’
/usr/include/c++/13/bits/stl_algo.h:1859:25:   required from ‘void std::__final_insertion_sort(_RandomAccessIterator, _RandomAccessIterator, _Compare) [with _RandomAccessIterator = __gnu_cxx::__normal_iterator<pair<any, __struct4>*, vector<pair<any, __struct4> > >; _Compare = __gnu_cxx::__ops::_Iter_comp_iter<main()::<lambda()>::<lambda(auto:3&, auto:4&)> >]’
/usr/include/c++/13/bits/stl_algo.h:1950:31:   required from ‘void std::__sort(_RandomAccessIterator, _RandomAccessIterator, _Compare) [with _RandomAccessIterator = __gnu_cxx::__normal_iterator<pair<any, __struct4>*, vector<pair<any, __struct4> > >; _Compare = __gnu_cxx::__ops::_Iter_comp_iter<main()::<lambda()>::<lambda(auto:3&, auto:4&)> >]’
/usr/include/c++/13/bits/stl_algo.h:4894:18:   required from ‘void std::sort(_RAIter, _RAIter, _Compare) [with _RAIter = __gnu_cxx::__normal_iterator<pair<any, __struct4>*, vector<pair<any, __struct4> > >; _Compare = main()::<lambda()>::<lambda(auto:3&, auto:4&)>]’
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:191:14:   required from here
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:192:53: error: no match for ‘operator<’ (operand types are ‘std::any’ and ‘std::any’)
  192 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:64,
                 from /usr/include/c++/13/algorithm:60,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:2:
/usr/include/c++/13/bits/stl_pair.h:835:5: note: candidate: ‘template<class _T1, class _T2> constexpr bool std::operator<(const pair<_T1, _T2>&, const pair<_T1, _T2>&)’
  835 |     operator<(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_pair.h:835:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:192:53: note:   ‘std::any’ is not derived from ‘const std::pair<_T1, _T2>’
  192 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
In file included from /usr/include/c++/13/bits/stl_algobase.h:67:
/usr/include/c++/13/bits/stl_iterator.h:455:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator<(const reverse_iterator<_Iterator>&, const reverse_iterator<_Iterator>&)’
  455 |     operator<(const reverse_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:455:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:192:53: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
  192 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:500:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator<(const reverse_iterator<_Iterator>&, const reverse_iterator<_IteratorR>&)’
  500 |     operator<(const reverse_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:500:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:192:53: note:   ‘std::any’ is not derived from ‘const std::reverse_iterator<_Iterator>’
  192 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1705:5: note: candidate: ‘template<class _IteratorL, class _IteratorR> constexpr bool std::operator<(const move_iterator<_IteratorL>&, const move_iterator<_IteratorR>&)’
 1705 |     operator<(const move_iterator<_IteratorL>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1705:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:192:53: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
  192 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1770:5: note: candidate: ‘template<class _Iterator> constexpr bool std::operator<(const move_iterator<_IteratorL>&, const move_iterator<_IteratorL>&)’
 1770 |     operator<(const move_iterator<_Iterator>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_iterator.h:1770:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:192:53: note:   ‘std::any’ is not derived from ‘const std::move_iterator<_IteratorL>’
  192 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
In file included from /usr/include/c++/13/bits/basic_string.h:47,
                 from /usr/include/c++/13/string:54,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:4:
/usr/include/c++/13/string_view:671:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator<(basic_string_view<_CharT, _Traits>, basic_string_view<_CharT, _Traits>)’
  671 |     operator< (basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:671:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:192:53: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  192 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
/usr/include/c++/13/string_view:678:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator<(basic_string_view<_CharT, _Traits>, __type_identity_t<basic_string_view<_CharT, _Traits> >)’
  678 |     operator< (basic_string_view<_CharT, _Traits> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:678:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:192:53: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  192 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
/usr/include/c++/13/string_view:686:5: note: candidate: ‘template<class _CharT, class _Traits> constexpr bool std::operator<(__type_identity_t<basic_string_view<_CharT, _Traits> >, basic_string_view<_CharT, _Traits>)’
  686 |     operator< (__type_identity_t<basic_string_view<_CharT, _Traits>> __x,
      |     ^~~~~~~~
/usr/include/c++/13/string_view:686:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:192:53: note:   ‘std::any’ is not derived from ‘std::basic_string_view<_CharT, _Traits>’
  192 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3829:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator<(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3829 |     operator<(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3829:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:192:53: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  192 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3843:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator<(const __cxx11::basic_string<_CharT, _Traits, _Allocator>&, const _CharT*)’
 3843 |     operator<(const basic_string<_CharT, _Traits, _Alloc>& __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3843:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:192:53: note:   ‘std::any’ is not derived from ‘const std::__cxx11::basic_string<_CharT, _Traits, _Allocator>’
  192 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3856:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> bool std::operator<(const _CharT*, const __cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 3856 |     operator<(const _CharT* __lhs,
      |     ^~~~~~~~
/usr/include/c++/13/bits/basic_string.h:3856:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:192:53: note:   mismatched types ‘const _CharT*’ and ‘std::any’
  192 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
In file included from /usr/include/c++/13/bits/memory_resource.h:47,
                 from /usr/include/c++/13/string:58:
/usr/include/c++/13/tuple:1961:5: note: candidate: ‘template<class ... _TElements, class ... _UElements> constexpr bool std::operator<(const tuple<_UTypes ...>&, const tuple<_UTypes ...>&)’
 1961 |     operator<(const tuple<_TElements...>& __t,
      |     ^~~~~~~~
/usr/include/c++/13/tuple:1961:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:192:53: note:   ‘std::any’ is not derived from ‘const std::tuple<_UTypes ...>’
  192 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
In file included from /usr/include/c++/13/map:63,
                 from /workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:5:
/usr/include/c++/13/bits/stl_map.h:1551:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator<(const map<_Key, _Tp, _Compare, _Allocator>&, const map<_Key, _Tp, _Compare, _Allocator>&)’
 1551 |     operator<(const map<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_map.h:1551:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:192:53: note:   ‘std::any’ is not derived from ‘const std::map<_Key, _Tp, _Compare, _Allocator>’
  192 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
In file included from /usr/include/c++/13/map:64:
/usr/include/c++/13/bits/stl_multimap.h:1172:5: note: candidate: ‘template<class _Key, class _Tp, class _Compare, class _Alloc> bool std::operator<(const multimap<_Key, _Tp, _Compare, _Allocator>&, const multimap<_Key, _Tp, _Compare, _Allocator>&)’
 1172 |     operator<(const multimap<_Key, _Tp, _Compare, _Alloc>& __x,
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_multimap.h:1172:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:192:53: note:   ‘std::any’ is not derived from ‘const std::multimap<_Key, _Tp, _Compare, _Allocator>’
  192 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:2079:5: note: candidate: ‘template<class _Tp, class _Alloc> bool std::operator<(const vector<_Tp, _Alloc>&, const vector<_Tp, _Alloc>&)’
 2079 |     operator<(const vector<_Tp, _Alloc>& __x, const vector<_Tp, _Alloc>& __y)
      |     ^~~~~~~~
/usr/include/c++/13/bits/stl_vector.h:2079:5: note:   template argument deduction/substitution failed:
/workspace/mochi/tests/machine/x/cpp/group_by_conditional_sum.cpp:192:53: note:   ‘std::any’ is not derived from ‘const std::vector<_Tp, _Alloc>’
  192 |               [](auto &a, auto &b) { return a.first < b.first; });
      |                                             ~~~~~~~~^~~~~~~~~
In file included from /usr/include/c++/13/bits/ios_base.h:46:
/usr/include/c++/13/system_error:324:3: note: candidate: ‘bool std::operator<(const error_code&, const error_code&)’
  324 |   operator<(const error_code& __lhs, const error_code& __rhs) noexcept
      |   ^~~~~~~~
/usr/include/c++/13/system_error:324:31: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_code&’
  324 |   operator<(const error_code& __lhs, const error_code& __rhs) noexcept
      |             ~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/system_error:507:3: note: candidate: ‘bool std::operator<(const error_condition&, const error_condition&)’
  507 |   operator<(const error_condition& __lhs,
      |   ^~~~~~~~
/usr/include/c++/13/system_error:507:36: note:   no known conversion for argument 1 from ‘std::any’ to ‘const std::error_condition&’
  507 |   operator<(const error_condition& __lhs,
      |             ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
